Note down that showthread_noreplies only works if there's a corresponding postbit_first template being used Thanks to Sama34 for raising

--- a/Documentation/undoc.html
+++ b/Documentation/undoc.html
@@ -232,7 +232,7 @@
    <ul>
     <li><strong>editpost_first</strong> - allows you to have a different <em>editpost</em> template for editing the first post of a thread; defaults to <code>{$editpost}</code> which uses the default <em>editpost</em> template</li>
     <li><strong>forumdisplay_group_sep</strong> and <strong>forumdisplay_thread_null</strong> - for use with thread grouping (is explained if you enable thread grouping); defaults to nothing</li>
-    <li><strong>showthread_noreplies</strong> - displayed in the <code>{$posts}</code> variable for <em>showthread</em> only if the thread has no replies; see the comment in the template for more information</li>
+    <li><strong>showthread_noreplies</strong> - displayed in the <code>{$posts}</code> variable for <em>showthread</em> only if the thread has no replies and a <em>postbit_first</em>* template is being used; see the comment in the template for more information</li>
     <li><strong>forumdisplay_searchforum_inline</strong> - inline forum searching - you don't need to bother with this unless you want to...</li>
     <li><strong>post_threadfields_inputrow</strong> - how extra fields are displayed in newthread/editpost (of first post) - don't need to worry about this one either</li>
     <li><strong>showthread_threadfields</strong> and <strong>showthread_threadfield_row</strong> - how extra fields are displayed in showthread; the latter is for each thread field, whereas the former is just a wrapper around all thread fields</li>
