Documentation: Clarify MyBB 1.6/1.8 difference in {$threadfields_display} placement

--- a/Documentation/undoc.html
+++ b/Documentation/undoc.html
@@ -216,7 +216,7 @@
     <li><strong>showthread</strong>
      <ul>
       <li>insert <code>{$first_post}</code> before <code>{$posts}</code>; in XThreads, it's possible to customise the first post differently from other posts</li>
-      <li>insert <code>{$threadfields_display}</code> before <code>{$classic_header}</code> - this is for displaying thread fields on show thread (note: displays on every page)</li>
+      <li>insert <code>{$threadfields_display}</code> before <code>{$classic_header}</code> (MyBB 1.4/1.6) or <code>&lt;tr&gt; &lt;td id=&quot;posts_container&quot;&gt;</code> (MyBB 1.8) - this is for displaying thread fields on show thread (note: displays on every page)</li>
      </ul>
     </li>
     <li><strong>forumdisplay_threadlist</strong>
